# SerialportTerminal

./: Cargo.toml  LICENSE  note.md
.cargo/: config.toml
.github/workflows/: build.yml  release-version.yml
src/: cli.rs  lib.rs  main.rs  terminal.rs
