[package]
name = "serialport_terminal"
version = "0.1.6"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
serialport = { version = "4.9.0", default-features = false }
tokio = { version = "1.52.3", features = ["io-std", "io-util", "macros", "rt-multi-thread", "sync", "time", "tokio-macros"] }
